# open-agent-episode

./: .gitignore  CONTRIBUTING.md  EXECUTION_PLAN.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mcp-inspector-issue.md  thesis-post.md
examples/: real_proof_pack_wrapped.json
fixtures/: broken_inconsistent.json  claude_minimal.json  codex_minimal.json  github_action_minimal.json
schema/: oae.v0.1.schema.json
src/assay_oae/: __init__.py  export.py
src/oae_verify/: __init__.py  verify.py
tests/: test_export.py  test_verify.py
