[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assay-oae"
version = "0.1.0"
description = "Open Agent Episode export from Assay proof packs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Tim B. Haserjian" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "jsonschema>=4.18",
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Haserjian/open-agent-episode"
Repository = "https://github.com/Haserjian/open-agent-episode"
Issues = "https://github.com/Haserjian/open-agent-episode/issues"
Documentation = "https://github.com/Haserjian/open-agent-episode/blob/main/README.md"

[project.scripts]
assay-oae-export = "assay_oae.export:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]